--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>GuadalupeSchool</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Primer Colegio Nacional Benemérito de la República de Nuestra Señora de Guadalupe</title>
 </head>
 <body>
-  <app-root></app-root>
+  <!-- Header (Encabezado, títulos, botones principales.) -->
+  <header class="bg-blue-500 p-4">
+    <div class="container mx-auto mt-8">
+      <div class="text-white text-lg font-bold">Primer Colegio Nacional Benemérito de la República de "Nuestra Señora de Guadalupe"</div>
+        <nav class="space-x-4">
+          <a href="#" class="text-white hover:underline">Nosotros</a>
+          <a href="#" class="text-white hover:underline">Admisión</a>
+          <a href="#" class="text-white hover:underline">Contáctenos</a>
+        </nav>
+    </div>
+  </header>
+  
+  <!-- Content (Contenido de la página, primera información. -->
+  <main>
+  <div class="container mx-auto mt-5">
+    <img src="assets/portada_0.jpg" alt="Portada principal">
+  </div>
+
+    <div class="container mx-auto mt-2 px-20 py-10">
+    <h1 class="text-black font-bold text-xl">Historia</h1>
+    <p class="text-sm text-justify py-2">La institución educativa Nuestra Señora de Guadalupe fue reconocida como primer colegio nacional benemérito de la República y patrimonio nacional por su legado histórico, educativo y cultural al Perú.
+      La norma, que aparece en la separata de normas legales del diario oficial El Peruano, lleva las firmas del presidente del Congreso, Luis Iberico, así como del presidente de la República, Ollanta Humala Tasso.
+      El colegio Guadalupe, cuya primera sede estuvo en la calle Chacarilla, en Lima, existe desde el año 1840, aunque en 1909 se trasladó a su actual sede de la avenida Alfonso Ugarte, en el Cercado de la capital.
+      Muchos de sus egresados han sido notables héroes nacionales e importantes personajes destacados en política, ciencias, letras, deportes y artes, como los ex presidentes Manuel Pardo y Lavalle y Manuel Cándamo Iriarte, así como los héroes nacionales José Quiñones y Leoncio Prado; el escritor Abraham Valdelomar; el historiador Jorge Basadre, el arqueólogo Julio C. Tello y el exalcalde Alberto Andrade.</p>
+    <p class="text-sm text-justify py-2">Actualmente es uno de los mil colegios estatales de secundaria donde se aplica la Jornada Escolar Completa, es decir que sus escolares estudian hasta las 15:30 horas, tiempo adicional que permitirá la enseñanza de inglés y otras materias que permitan una mayor capacitación de sus alumnos.</p>
+  </div>
+  </main>
+  <!-- Footer (Aviso de Copyright, información de contacto, etc. -->
+  <footer class="text-center bg-gray-300 p-4">
+    <p class="text-xs text-slate-500">Copyright © 2024 JV Technical Support. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
